# darkord-sls-template

./: .gitignore  Cargo.toml  README.md  install_layers_requirements.py  package-lock.json  package.json  requirements.txt  serverless-compose.yml  serverless.api.yml  serverless.db.yml
functions/hello/: main.rs
src/api/: Cargo.toml  serverless.yml
src/api/hello/: Cargo.toml  handler.py
src/api/hello/src/: main.rs
src/db/: serverless.yml
src/layers/: serverless.yml
src/layers/{module-name}-layer/python/: {module_name}_constants.py
src/module-lib/: Cargo.toml
