[package]
name = "hello"
edition = "2021"
rust-version = "1.78"

[package.metadata.lambda.build.compiler]
type = "cross"

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
module-lib = { path = "../../module-lib" }
aws-config = "1.4"
aws-sdk-dynamodb = "1.27"
aws-sdk-ssm = "1.27"
common = { path = "../../../../darkord-sls-common/src/common" }
jsonwebtoken = { version = "9.3", default-features = false }
lambda_runtime = "0.11.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros"] }
uuid = { version = "1.8", features = ["v4", "fast-rng"] }
validator = { version = "0.18.1", features = ["derive"] }

[dependencies.aws_lambda_events]
version = "0.15.1"
default-features = false
features = ["apigw"]
